--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,57 +1,3 @@
-.footer__content {
-  box-sizing: border-box;
-  padding-top: 30px;
-  padding-bottom: 28px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.footer__info {
-  display: flex;
-}
-
-.footer__navigation {
-  margin-right: 45px;
-}
-
-.footer__copyright {
-  margin: 0;
-  text-align: start;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 22px;
-  color: #B6BCBF;
-}
-
-@media (max-width: 767px) {
-  .footer__content {
-    flex-direction: column;
-    padding-top: 16px;
-    padding-bottom: 16px;
-  }
-
-  .footer__info {
-    order: 1;
-    margin-bottom: 38px;
-    width: calc((100vw - 320px)/(767 - 320) * (464 - 454) + 454px);
-    justify-content: space-between;
-  }
-
-  .footer__copyright {
-    order: 2;
-  }
-
-  .footer__navigation {
-    flex-direction: column;
-    padding-left: 0;
-  }
-}
-
-@media (max-width: 520px) {
-  .footer__info {
-    width: 100%;
-  }
-}
+@import './__content/footer__content.css';
+@import './__info/footer__info.css';
+@import './__copyright/footer__copyright.css';
