--- a/src/blocks/news/news.css
+++ b/src/blocks/news/news.css
@@ -1,9 +1,14 @@
 .news {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.news_invisible {
+  display: none;
 }
 
 .news__title {
@@ -15,6 +20,7 @@
   width: 100%;
   margin-bottom: 64px;
   display: grid;
+  /* display: none; */
   grid-template-columns: repeat(auto-fill, 400px);
   grid-template-rows: repeat(auto-fill, 576px);
   column-gap: 16px;
