--- a/src/blocks/social/social.css
+++ b/src/blocks/social/social.css
@@ -22,6 +22,14 @@
   text-decoration: none;
 }
 
+.social__link:hover {
+  opacity: 0.7;
+}
+
+.social__link:active .social__path {
+  fill: #2A65CC;
+}
+
 @media (max-width: 767px) {
   .social__item {
     padding: 0;
