--- a/src/blocks/info-block/info-block.css
+++ b/src/blocks/info-block/info-block.css
@@ -1,33 +1,9 @@
+@import './__description/info-block__description.css';
+@import './__title/info-block__title.css';
+@import './__subtitle/info-block__subtitle.css';
+
 .info-block {
   width: 100%;
   padding-top: 40px;
   padding-bottom: 56px;
-}
-
-.info-block__description {
-  margin: 0 0 28px 0;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 24px;
-  color: rgba(26, 27, 34, 0.5);
-}
-
-.info-block__title {
-  margin: 0 0 30px 0;
-  max-width: 530px;
-  text-align: start;
-}
-
-.info-block__subtitle {
-  max-width: 545px;
-  margin: 0;
-  text-align: start;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 24px;
-  color: #1A1B22;
 }
