--- a/src/blocks/news/news.css
+++ b/src/blocks/news/news.css
@@ -1,3 +1,7 @@
+@import './_invisible/news_invisible.css';
+@import './__title/news__title.css';
+@import './__cards/news__cards.css';
+
 .news {
   position: relative;
   width: 100%;
@@ -5,50 +9,4 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-
-.news_invisible {
-  display: none;
-}
-
-.news__title {
-  margin-bottom: 64px;
-  align-self: flex-start;
-}
-
-.news__cards {
-  width: 100%;
-  margin-bottom: 64px;
-  display: grid;
-  /* display: none; */
-  grid-template-columns: repeat(auto-fill, 400px);
-  grid-template-rows: repeat(auto-fill, 576px);
-  column-gap: 16px;
-  row-gap: 16px;
-  justify-content: center;
-}
-
-@media (min-width: 768px) and (max-width: 1439px) {
-  .news__cards {
-    grid-template-columns: repeat(auto-fill, calc((100vw - 768px)/(1439 - 768) * (400 - 224) + 224px));
-    grid-template-rows: repeat(auto-fill, calc((100vw - 768px)/(1439 - 768) * (576 - 420) + 420px));
-    column-gap: calc((100vw - 768px)/(1439 - 768) * (16 - 8) + 8px);
-    row-gap: calc((100vw - 768px)/(1439 - 768) * (16 - 8) + 8px);
-  }
-}
-
-@media (min-width: 320px) and (max-width: 767px) {
-  .news__cards {
-    grid-template-columns: repeat(auto-fill, calc((100vw - 320px)/(767 - 320) * (224 - 288) + 288px));
-    grid-template-rows: repeat(auto-fill, calc((100vw - 320px)/(767 - 320) * (420 - 446) + 446px));
-    row-gap: 10px;
-  }
-}
-
-@media (max-width: 319px) {
-  .news__cards {
-    grid-template-columns: repeat(auto-fill, 288px);
-    grid-template-rows: repeat(auto-fill, 446px);
-    row-gap: 10px;
-  }
 }
