--- a/src/blocks/search/search.css
+++ b/src/blocks/search/search.css
@@ -1,48 +1,7 @@
+@import './__input/search__input.css';
+@import './__button/search__button.css';
+
 .search {
   position: relative;
   width: 100%;
-}
-
-.search__input {
-  box-sizing: border-box;
-  padding: 21px 24px;
-  width: 100%;
-  background-color: #FFF;
-  border: 1px solid #D1D2D6;
-  box-sizing: border-box;
-  backdrop-filter: blur(8px);
-  border-radius: 100px;
-}
-
-.search__input::placeholder {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  color: #B6BCBF;
-}
-
-.search__button {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-}
-
-@media (max-width: 767px) {
-  .search__button {
-    position: static;
-    width: 288px;
-  }
-
-  .search__input {
-    margin-bottom: 16px;
-  }
-}
-
-@media (max-width: 600px) {
-  .search__button {
-    width: 100%;
-  }
 }
