--- a/src/blocks/form/__input/form__input.css
+++ b/src/blocks/form/__input/form__input.css
@@ -1,7 +1,10 @@
+@import './_invalid/form__input_invalid.css';
+
 .form__input {
   box-sizing: border-box;
   padding: 10px 8px;
   border: none;
+  border-radius: 5px;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
   background-color: unset;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
