--- a/src/blocks/form/form.css
+++ b/src/blocks/form/form.css
@@ -7,12 +7,13 @@
 @import './__fieldset/form__fieldset.css';
 @import './__redirect-text/form__redirect-text.css';
 @import './__redirect-link/form__redirect-link.css';
+@import './_active/form_active.css';
 
 .form {
   box-sizing: border-box;
   padding: 34px 36px 28px;
   width: 430px;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   background-color: #FFF;
