--- a/src/blocks/success-message/success-message.css
+++ b/src/blocks/success-message/success-message.css
@@ -5,10 +5,14 @@
   box-sizing: border-box;
   padding: 43px 36px 51px;
   width: 430px;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: flex-start;
   background-color: #FFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 16px;
+}
+
+.success-message_visible {
+  display: flex;
 }
