--- a/src/blocks/card/__bottom/card__bottom.css
+++ b/src/blocks/card/__bottom/card__bottom.css
@@ -1,5 +1,6 @@
 .card__bottom {
-  height: 100%;
+  width: 100%;
+  height: 56%;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
