--- a/src/blocks/snackbar/snackbar.css
+++ b/src/blocks/snackbar/snackbar.css
@@ -15,6 +15,10 @@
   border-radius: 8px;
 }
 
+.snackbar_theme_dark {
+  background-color: rgb(78, 77, 77);
+}
+
 
 .snackbar_visible {
   display: flex;
